package unibo.exiled.model.utilities;

/**
 * Enumeration representing the types of items available in the game
 */
public enum ItemType {
    HEALTH, POWERUP, RESOURCE
}
