@startuml
scale 0.5
interface Item {
    +getName(): String
    +getDescription(): String
    +getType(): ItemType
}

enum ItemType {
    HEALTH
    POWERUP
    RESOURCE
}

class ItemBase {
    -name: String
    -description: String
    -itemType: ItemType
    +ItemBase(name: String, description: String, itemType: ItemType)
}

class HealingItem {
    -healingAmount: double
    +HealingItem(name: String, description: String, healingAmount: double)
}

interface UsableItem {
    +use(player: Player): void
    +getAmount(): double
}

class PowerUpItem {
    -boostedAttribute: AttributeIdentifier
    -powerUpValue: double
    +PowerUpItem(name: String, description: String, powerUpValue: double, boostedAttribute: AttributeIdentifier)
    +getBoostedAttribute(): AttributeIdentifier
}

interface Player {
    +useItem(item: UsableItem): void
}

class UnUsableItem {
    +UnUsableItem(name: String, description: String)
}

interface Inventory {
    +addItem(item: Item): void
    +removeItem(item: Item): void
    +getItemQuantity(item: Item): Integer
    +containsItem(item: Item): boolean
    +getItems(): Map<Item, Integer>
}

class InventoryImpl {
    -itemsList: Map<Item, Integer>
}

Item <|-- ItemBase
ItemBase --|> ItemType

HealingItem --|> ItemBase
PowerUpItem --|> ItemBase
UnUsableItem --|> ItemBase

Inventory --> Item
InventoryImpl --|> Inventory

UsableItem <|.. HealingItem
UsableItem <|.. PowerUpItem

Player --> UsableItem
@enduml